# rt-fldyn

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
src/basic/: CMakeLists.txt  basic.cpp  basic.h  model.h  renderer.cpp  renderer.h  solver.cpp  solver.h  ui.cpp  ui.h
